# mame-synth

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CODEBASE.md  Cargo.toml  ROADMAP.md
.claude/: settings.json
.githooks/: pre-commit
analysis/: EXTRACTION_ANALYSIS.md
crates/synth-core/: Cargo.toml  build.rs
crates/synth-core/src/: audio.rs  ay8910.rs  chip.rs  lib.rs  macros.rs  messages.rs  midi.rs  midi_file.rs  namco_wsg.rs  opl_ffi.rs  patch.rs  pokey.rs  ricoh2a03.rs  scc.rs  sid6581.rs  sid_extract.rs  sn76489.rs  vgm.rs  vgm_extract.rs  voice.rs  ym2151.rs  ym2151_ffi.rs  ym2612.rs  ym2612_ffi.rs  ym3812.rs  ymf262.rs
crates/synth-core/tests/: audio_harness.rs  chip_properties.rs
crates/synth-core/wrapper/: ymfm_opl_wrapper.cpp  ymfm_opl_wrapper.h  ymfm_opm_wrapper.cpp  ymfm_opm_wrapper.h  ymfm_wrapper.cpp  ymfm_wrapper.h
crates/synth-gui/: Cargo.toml
crates/synth-gui/src/: app.rs  input.rs  lib.rs  rack_panel.rs  theme.rs  transport.rs
crates/synth-gui/src/panels/: mod.rs  sid6581_panel.rs  sn76489_panel.rs  ym2612_panel.rs
crates/synth-gui/src/widgets/: keyboard.rs  knob.rs  mod.rs  vu_meter.rs  waveform.rs
demos/: demo_chords.mid  demo_melody.mid  sn76489_scale.vgm
docs/decisions/: 001-ymfm-over-nuked.md  002-file-polling-e2e.md  003-macro-engine-frame-rate.md  004-progressive-buffer-selection.md
src/: extract.rs  generate_demos.rs  main.rs
tests/: e2e_wayland.rs
