[package]
name = "synth-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
cpal = "0.15"
midir = "0.10"
rtrb = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midly = "0.5"
flate2 = "1"
log = { workspace = true }
anyhow = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
